tests/fixtures/parser/should_fail/02_module_body.pas
(* should_fail: module_block has declarations only, no compound_stmt. *)
MODULE M;
BEGIN
END.
